syntax = "proto3";
package evmos.feesplit.v1;

import "evmos/feesplit/v1/feesplit.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/evmos/evmos/v8/x/feesplit/types";

// GenesisState defines the module's genesis state.
message GenesisState {
  // module parameters
  Params params = 1 [ (gogoproto.nullable) = false ];
  // active registered contracts for fee distribution
  repeated FeeSplit fee_splits = 2 [ (gogoproto.nullable) = false ];
}

// Params defines the feesplit module params
message Params {
  // enable_fee_split defines a parameter to enable the feesplit module
  bool enable_fee_split = 1;
  // developer_shares defines the proportion of the transaction fees to be
  // distributed to the registered contract owner
  string developer_shares = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  // addr_derivation_cost_create defines the cost of address derivation for
  // verifying the contract deployer at fee registration
  uint64 addr_derivation_cost_create = 3;
}
